update title and show Ph.D.

--- a/sample.tex
+++ b/sample.tex
@@ -83,7 +83,7 @@
 
 \begin{document}
 \name{Beno{\^\i}t Verhaeghe}
-\tagline{Ingénieur Logiciel}
+\tagline{Docteur en Génie Logiciel}
 %% You can add multiple photos on the left or right
 \photoR{2.8cm}{profil}
 
@@ -112,7 +112,7 @@
 \begin{paracol}{2}
 \cvsection{Experience}
 
-\cvevent{Ingénieur R\&D}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
+\cvevent{Ph.D. -- Ingénieur R\&D}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
 \begin{itemize}
 \item Migration d'applications
 \item Encadrement de doctorants et de stagiaires
