--- a/sample.bib
+++ b/sample.bib
@@ -174,3 +174,16 @@
   HAL_ID = {tel-03428543},
   HAL_VERSION = {v1},
 }
+
+@conference{icsoft22,
+author={Verhaeghe, Beno{\^\i}t and Shatnawi, Anas and Seriai, Abderrahmane and Etien, Anne and Anquetil, Nicolas and Derras, Mustapha and Ducasse, St{\'e}phane},
+title={A Hybrid Architecture for the Incremental Migration of a Web Front-end},
+booktitle={Proceedings of the 17th International Conference on Software Technologies - ICSOFT,},
+year={2022},
+pages={101-110},
+publisher={SciTePress},
+organization={INSTICC},
+doi={10.5220/0011338900003266},
+isbn={978-989-758-588-3},
+issn={2184-2833},
+}
