add project add success

--- a/sample.tex
+++ b/sample.tex
@@ -156,7 +156,15 @@
 
 \cvsection{Projets}
 
-\cvevent{SmartTest}{Inria RMoD}{Juillet 2017}{Lille, FRANCE}
+\cvevent{Pharo Language Server}{Inria RMoD}{Décembre 2021}{Grenoble, FRANCE}
+\begin{itemize}
+\item Connecter Pharo avec VSCode
+\item +21 étoiles GitHub
+\end{itemize}
+
+\divider
+
+\cvevent{SmartTest}{Inria RMoD}{Juillet 2017 - 2019{Lille, FRANCE}
 \begin{itemize}
 \item Sélection de tests automatiques (Pharo)
 \item Développement de différentes stratégies d’exécution de test (Pharo)
@@ -200,6 +208,11 @@
 % \end{quote}
 
 \cvsection{Succès}
+
+\cvachievement{\faTrophy}{3ème place Innovation Award}{Pharo Language Server est arrivé deuxième à l’Innovation Award de ESUG2022}
+
+\divider
+
 
 \cvachievement{\faTrophy}{Best Paper Award}{Migrating GWT to Angular 6 using MDE @ Sattose}
 
