--- a/sample.tex
+++ b/sample.tex
@@ -164,7 +164,7 @@
 
 \divider
 
-\cvevent{SmartTest}{Inria RMoD}{Juillet 2017 - 2019{Lille, FRANCE}
+\cvevent{SmartTest}{Inria RMoD}{Juillet 2017 -- 2019}{Lille, FRANCE}
 \begin{itemize}
 \item Sélection de tests automatiques (Pharo)
 \item Développement de différentes stratégies d’exécution de test (Pharo)
@@ -209,7 +209,7 @@
 
 \cvsection{Succès}
 
-\cvachievement{\faTrophy}{3ème place Innovation Award}{Pharo Language Server est arrivé deuxième à l’Innovation Award de ESUG2022}
+\cvachievement{\faTrophy}{3ème place Innovation Award}{Pharo Language Server est arrivé troisième à l’Innovation Award de ESUG2022}
 
 \divider
 
