add lot of teaching

--- a/sample.tex
+++ b/sample.tex
@@ -89,7 +89,7 @@
 
 \personalinfo{%
   % Not all of these are required!
-  \email{badetitou@gmail.com}
+  \email{work@badetitou.fr}
   \phone{+33 6 58 33 53 74}
   \mailaddress{34bis, avenue Jean Jaurès}
   \location{38600 Fontaine, FRANCE}
@@ -105,18 +105,19 @@
 % \AtBeginEnvironment{itemize}{\small}
 
 %% Set the left/right column width ratio to 6:4.
-\columnratio{0.6}
+% \columnratio{0.6}
 
 % Start a 2-column paracol. Both the left and right columns will automatically
 % break across pages if things get too long.
-\begin{paracol}{2}
-\cvsection{Experience}
+% \begin{paracol}{2}
+\cvsection{Experiences}
 
 \cvevent{Ph.D. -- Ingénieur R\&D}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
 \begin{itemize}
 \item Migration d'applications
 \item Encadrement de doctorants et de stagiaires
 \item Écriture de papiers de recherche
+\item Suivi du contrat cadre signé entre Berger-Levrault et Inria
 \end{itemize}
 
 \divider
@@ -164,6 +165,13 @@
 
 \divider
 
+\cvevent{Casino}{Inria RMoD}{Février 2018}{Lille, FRANCE}
+\begin{itemize}
+\item Migration automatique de front-end
+\end{itemize}
+
+\divider
+
 \cvevent{SmartTest}{Inria RMoD}{Juillet 2017 -- 2019}{Lille, FRANCE}
 \begin{itemize}
 \item Sélection de tests automatiques (Pharo)
@@ -199,13 +207,87 @@
 
 %% Switch to the right column. This will now automatically move to the second
 %% page if the content is too long.
-\switchcolumn
+% \switchcolumn
 
 % \cvsection{My Life Philosophy}
 
 % \begin{quote}
 % ``Something smart or heartfelt, preferably in one sentence.''
 % \end{quote}
+
+\cvsection{Enseignements}
+
+\cvevent{Architectures Logicielles}{Polytech'Lille}{2019 -- 2021}{Lille, FRANCE}
+
+\begin{itemize}
+\item \faClock 75 heures
+\item 2ème année d'école d'ingénieur (Master 1)
+\end{itemize}
+
+J'ai encadré pendant trois ans des étudiants pendant les TPs d'architecture logicielles de Polytech'Lille.
+Puis j'ai suivi des groupes d'étudiants pendant leurs projets d'architectures logicielles.
+L'objectif de cet enseignement était de faire découvrir les architectures 3-tiers.
+
+\divider
+
+\cvevent{Structures de données}{Polytech'Lille}{2019}{Lille, FRANCE}
+\begin{itemize}
+\item \faClock 12 heures
+\item 1er année d'école d'ingénieur (Licence 3)
+\end{itemize}
+
+J'ai enseigné les TPs de structures de données à Polytech'Lille aux étudiants de première années du cycle ingénieur.
+L'objectif était de faire développer et manipuler les structures de données en C.
+En cas d'exemple, nous avons aussi demandé aux étudiants d'utiliser les structures de données afin de résoudre des problèmes venus de la thèorie des graphes.
+
+\divider
+
+\cvevent{Système d'exploitation}{Universit\'e de Montpellier}{2020}{Montpellier, FRANCE}
+
+\begin{itemize}
+  \item \faClock 40 heures
+  \item Licence 2
+\end{itemize}
+
+J'ai suivi une trentaine d'étudiants pendant dix séances TPs de 4 heures pour les accompagner dans les apprentissages liés au système d'exploitation.
+Ces enseignements visés à enseigner les languages de programmation C et Python.
+En particulier, l'objectif était de faire comprendre le fonctionnement de la compilation séparée,
+des différentes structures de données
+et du fonctionnement du système d'entrées et sorties d'une application.
+
+\divider
+
+\cvevent{Evolution et restructuration de logiciels}{Universit\'e de Montpellier}{2019 -- 2020}{Montpellier, FRANCE}
+\begin{itemize}
+\item \faClock 16h
+\item Master 2
+\end{itemize}
+
+J'ai enseigné durant ce cour à des étudiants de Master 2 de l'université de Montpellier.
+Pour cet enseignement, j'ai du concevoir, le cours, le TP et le TD.
+Les étudiants ont pu découvrir le language de programmation Pharo, la platforme d'analyse Moose et l'utilisation des modèles et méta-modèles afin d'extraire de l'information à partir du code d'un logiciel qu'ils ne connaissaient pas.
+
+\divider
+
+\cvevent{Fondamentaux architectures et systèmes d’exploitatio}{Polytech'Montpellier}{2020}{Montpellier, FRANCE}
+\begin{itemize}
+\item \faClock 2h
+\item 1er année d'école d'ingénieur (Licence 3)
+\end{itemize}
+
+J'ai pu donner un cours sur le fonctionnement des processus sur Linux.
+En particulier, leurs fonctionnement, comment utiliser les \textit{fork}, lister les processus, et envoyer des signaux aux processus an utilisant Python.
+
+\divider
+
+\cvevent{Architectures et Systèmes appliqués à l’IOT}{Polytech'Montpellier}{2020}{Montpellier, FRANCE}
+\begin{itemize}
+  \item \faClock 17h
+  \item 1er année d'école d'ingénieur (Licence 3)
+\end{itemize}
+
+Durant cet enseignement j'ai suivi des étudiants pendant leurs découvertes de la programmation Python pour controler un Arduino.
+J'ai dans un premier temps fait l'enseignement des TPs, puis le suivi de projet et enfin l'évaluation des projets.
 
 \cvsection{Succès}
 
@@ -233,7 +315,7 @@
 \cvtag{Pharo}
 \cvtag{Java/JEE}
 \cvtag{Angular}
-\cvtag{GWT} \\
+\cvtag{GWT}
 \cvtag{Spring}
 \cvtag{C}
 
@@ -289,7 +371,7 @@ Support à la migration d'applications GWT vers Angular
 % {Address Line 1\\Address line 2}
 
 
-\end{paracol}
+% \end{paracol}
 
 \cvsection{Publications}
 
