--- a/sample.tex
+++ b/sample.tex
@@ -166,9 +166,10 @@
 \divider
 
 \cvevent{Casino}{Inria RMoD}{Février 2018}{Lille, FRANCE}
-\begin{itemize}
-\item Migration automatique de front-end
-\end{itemize}
+
+Casino est l'outil que j'ai développé pendant ma thèse et dont l'objectif est de faciliter la migration des front-ends d'application.
+L'outil est composé d'un méta-modèle, de plusieurs importeurs et plusieurs exporteurs.
+Il est disponible sur GitHub.
 
 \divider
 
@@ -252,7 +253,7 @@ En cas d'exemple, nous avons aussi demandé aux étudiants d'utiliser les struct
 J'ai suivi une trentaine d'étudiants pendant dix séances TPs de 4 heures pour les accompagner dans les apprentissages liés au système d'exploitation.
 Ces enseignements visés à enseigner les languages de programmation C et Python.
 En particulier, l'objectif était de faire comprendre le fonctionnement de la compilation séparée,
-des différentes structures de données
+les différentes structures de données
 et du fonctionnement du système d'entrées et sorties d'une application.
 
 \divider
