--- a/sample.tex
+++ b/sample.tex
@@ -120,6 +120,9 @@
 \item Suivi du contrat cadre signé entre Berger-Levrault et Inria
 \end{itemize}
 
+Suite à ma thèse, l'entreprise Berger-Levrault et l'Inria ont signé un contrat cadre (\href{https://www.inria.fr/fr/berger-levrault-inria-partenariat-numerique-responsable}{\color{blue}\underline{post inria}}).
+Je suis donc resté en poste chez Berger-Levrault en tant qu'ingénieur R\&D afin de poursuivre les travaux de migration de logiciel, et de suivre les doctorants qui découlent de ce contrat cadre.
+
 \divider
 
 \cvevent{Doctorant Génie Logiciel}{Berger-Levrault/Inria RMoD}{Janvier 2019 -- Octobre 2021}{Montpellier/Lille, FRANCE}
