ajout lien support

--- a/sample.tex
+++ b/sample.tex
@@ -251,6 +251,7 @@ En cas d'exemple, nous avons aussi demandé aux étudiants d'utiliser les struct
 \begin{itemize}
   \item \faClock 40 heures
   \item Licence 2
+  \item Support : \url{https://badetitou.fr/teaching/mtp/HLIN303/}
 \end{itemize}
 
 J'ai suivi une trentaine d'étudiants pendant dix séances TPs de 4 heures pour les accompagner dans les apprentissages liés au système d'exploitation.
@@ -265,6 +266,7 @@ et du fonctionnement du système d'entrées et sorties d'une application.
 \begin{itemize}
 \item \faClock 16h
 \item Master 2
+\item Support TP : \url{https://badetitou.fr/teaching/mtp/VisuRCA/}
 \end{itemize}
 
 J'ai enseigné durant ce cour à des étudiants de Master 2 de l'université de Montpellier.
@@ -337,12 +339,29 @@ J'ai dans un premier temps fait l'enseignement des TPs, puis le suivi de projet 
 
 \cvsection{Formation}
 
-\cvevent{Ph.D. en Génie Logiciel}{Université de Lille / Berger-Levrault}{Janvier 2019 -- Octobre 2021}{}
+\cvevent{Ph.D. en Génie Logiciel}{Université de Lille -- Inria / Berger-Levrault}{Janvier 2019 -- Octobre 2021}{}
 Support à la migration d'applications GWT vers Angular
+
+\textbf{Encadrement Académique :}\\
+Nicolas Anquetil -- Professeur Associé -- Université de Lille\\
+Anne Etien -- Professeure -- Université de Lille\\
+\textbf{Encadrement Industriel :} Abderrahmane Seriai -- Berger-Levrault
+
+
+\textbf{Rapporteurs :}\\
+Salah Sadou -- Professeur -- Université Bretagne Sud\\
+Jean-Rémy Falleri -- Professeur Associé -- Université de Bordeaux Sud\\
+
+\textbf{Président du jury :}\\
+Franck Barbier -- Professeur -- Université de Pau et des Pays de l’Adour
+
 
 \divider
 
 \cvevent{Ingénieur Informatique et Statistique}{Polytech Lille}{Septembre 2015 -- Juillet 2018}{}
+
+\textbf{Projet de fin d'étude :} Migration : GWT to Angular\\
+\textbf{Encadrement :} Anne Etien, Nicolas Anquetil, Laurent Deruelle et Abderrahmane Seriai
 
 \divider
 
