add link blog posts

--- a/sample.tex
+++ b/sample.tex
@@ -131,6 +131,14 @@ Je suis donc resté en poste chez Berger-Levrault en tant qu'ingénieur R\&D afi
 \item Mise en place d'architecture hybride
 \item Écriture de papiers de recherche
 \item Enseignement théorie des modèles
+\item Écriture de blog post sur la platforme Moose
+\begin{itemize}
+  \item \url{https://modularmoose.org/2022/10/27/test-your-moose-code-using-ci.html}
+  \item \url{https://modularmoose.org/2021/10/01/migrating-internationalization.html}
+  \item \url{https://modularmoose.org/2021/07/19/automatic-metamodel-documentation-generation.html}
+  \item \url{https://modularmoose.org/2021/05/15/connecting-meta-models.html}
+\end{itemize}
+
 \end{itemize}
 
 \divider
