--- a/sample.tex
+++ b/sample.tex
@@ -105,11 +105,79 @@
 % \AtBeginEnvironment{itemize}{\small}
 
 %% Set the left/right column width ratio to 6:4.
-% \columnratio{0.6}
+\columnratio{0.6}
 
 % Start a 2-column paracol. Both the left and right columns will automatically
 % break across pages if things get too long.
-% \begin{paracol}{2}
+\begin{paracol}{2}
+
+\cvsection{Experiences}
+
+\cvsection{Projets}
+
+  
+\switchcolumn
+
+\cvsection{Succès}
+
+\cvachievement{\faTrophy}{3ème place Innovation Award}{
+  \href{https://marketplace.visualstudio.com/items?itemName=badetitou.pharo-language-server}{\color{blue}\underline{Pharo Language Server}} est arrivé troisième à l’Innovation Award de ESUG2022}
+
+\divider
+
+
+\cvachievement{\faTrophy}{Best Paper Award}{Migrating GWT to Angular 6 using MDE @ Sattose}
+
+\divider
+
+\cvachievement{\faTrophy}{2ème place Innovation Award}{\href{https://badetitou.fr/projects/SmartTest/}{\color{blue}\underline{SmartTest}} est arrivé deuxième à l’Innovation Award de ESUG2017}
+
+% \divider
+
+% \cvachievement{\faTrophy}{2ème place Nuit de l’Info}{J’étais responsable d’une équipe durant la Nuit de l’Info 2016}
+
+% \divider
+
+% \cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
+
+\cvsection{Compétences}
+
+\cvtag{Pharo}
+\cvtag{MDE}
+\cvtag{Java/JEE}
+\cvtag{Angular}
+\cvtag{GWT}
+\cvtag{Spring}
+\cvtag{C}
+
+\cvsection{Formation}
+
+\cvevent{Ph.D. en Génie Logiciel}{Université de Lille -- Inria / Berger-Levrault}{Janvier 2019 -- Octobre 2021}{}
+
+Support à la migration d'applications GWT vers Angular
+
+
+\divider
+
+\cvevent{Ingénieur Informatique et Statistique}{Polytech Lille}{Septembre 2015 -- Juillet 2018}{}
+
+\divider
+
+\cvevent{DUT Informatique}{IUT A - Université de Lille}{Sept 2014 -- Juin 2015}{}
+
+\cvsection{Langues}
+
+\cvskill{Français}{5}
+\divider
+
+\cvskill{Anglais}{4}
+
+\end{paracol}
+
+\newpage
+
+\cvsection{Long CV}
+
 \cvsection{Experiences}
 
 \cvevent{Ph.D. -- Ingénieur R\&D}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
@@ -165,6 +233,7 @@ Je suis donc resté en poste chez Berger-Levrault en tant qu'ingénieur R\&D afi
   \item Développement de l'application "Factory Interface"
 \end{itemize}
 
+\newpage
 
 \cvsection{Projets}
 
@@ -303,43 +372,6 @@ En particulier, leurs fonctionnement, comment utiliser les \textit{fork}, lister
 Durant cet enseignement j'ai suivi des étudiants pendant leurs découvertes de la programmation Python pour controler un Arduino.
 J'ai dans un premier temps fait l'enseignement des TPs, puis le suivi de projet et enfin l'évaluation des projets.
 
-\cvsection{Succès}
-
-\cvachievement{\faTrophy}{3ème place Innovation Award}{Pharo Language Server est arrivé troisième à l’Innovation Award de ESUG2022}
-
-\divider
-
-
-\cvachievement{\faTrophy}{Best Paper Award}{Migrating GWT to Angular 6 using MDE @ Sattose}
-
-\divider
-
-\cvachievement{\faTrophy}{2ème place Innovation Award}{SmartTest est arrivé deuxième à l’Innovation Award de ESUG2017}
-
-\divider
-
-\cvachievement{\faTrophy}{2ème place Nuit de l’Info}{J’étais responsable d’une équipe durant la Nuit de l’Info 2016}
-
-% \divider
-
-% \cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
-
-\cvsection{Compétences}
-
-\cvtag{Pharo}
-\cvtag{Java/JEE}
-\cvtag{Angular}
-\cvtag{GWT}
-\cvtag{Spring}
-\cvtag{C}
-
-\cvsection{Langues}
-
-\cvskill{Français}{5}
-\divider
-
-\cvskill{Anglais}{4}
-
 %% Yeah I didn't spend too much time making all the
 %% spacing consistent... sorry. Use \smallskip, \medskip,
 %% \bigskip, \vspace etc to make adjustments.
@@ -402,7 +434,6 @@ Franck Barbier -- Professeur -- Université de Pau et des Pays de l’Adour
 % {Address Line 1\\Address line 2}
 
 
-% \end{paracol}
 
 \cvsection{Publications}
 
