--- a/sample.tex
+++ b/sample.tex
@@ -113,7 +113,53 @@
 
 \cvsection{Experiences}
 
+\cvevent{Ph.D. -- Ingénieur R\&D}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
+\begin{itemize}
+  \item Migration d'applications
+  \item Encadrement de doctorants et de stagiaires
+  \item Écriture de papiers de recherche
+  \item Suivi du contrat cadre signé entre Berger-Levrault et Inria
+\end{itemize}
+
+\divider
+
+\cvevent{Doctorant Génie Logiciel}{Berger-Levrault/Inria RMoD}{Janvier 2019 -- Octobre 2021}{Montpellier/Lille, FRANCE}
+\begin{itemize}
+  \item Migration d'applications GWT vers Angular
+  \item Mise en place d'architecture hybride
+  \item Écriture de papiers de recherche
+  \item Enseignement théorie des modèles
+\end{itemize}
+
+\divider
+
+\cvevent{Ingénieur Logiciel}{Berger-Levrault}{Mars 2018 -- Décembre 2018}{Montpellier, FRANCE}
+\begin{itemize}
+  \item Analyse de l’architecture des applications de Berger-Levrault
+  \item Développement d'outils pour la migration de GWT vers Angular
+\end{itemize}
+
+\divider
+
+\cvevent{Etudiant-Chercheur}{RMoD - Inria Lille Nord Europe}{Mai -- Septembre 2017}{Villeneuve d'Ascq, France}
+
+
 \cvsection{Projets}
+
+\cvevent{Pharo Language Server}{Inria RMoD}{Décembre 2021}{Grenoble, FRANCE}
+\begin{itemize}
+\item Connecter Pharo avec VSCode
+\item +21 étoiles GitHub
+\end{itemize}
+
+\divider
+
+\cvevent{Casino}{Inria RMoD}{Février 2018}{Lille, FRANCE}
+
+Casino est l'outil que j'ai développé pendant ma thèse et dont l'objectif est de faciliter la migration des front-ends d'application.
+L'outil est composé d'un méta-modèle, de plusieurs importeurs et plusieurs exporteurs.
+Il est disponible sur GitHub.
+
 
   
 \switchcolumn
@@ -237,7 +283,7 @@ Je suis donc resté en poste chez Berger-Levrault en tant qu'ingénieur R\&D afi
 
 \cvsection{Projets}
 
-\cvevent{Pharo Language Server}{Inria RMoD}{Décembre 2021}{Grenoble, FRANCE}
+\cvevent{Pharo Language Server}{}{Décembre 2021 -- 2023}{Grenoble, FRANCE}
 \begin{itemize}
 \item Connecter Pharo avec VSCode
 \item +21 étoiles GitHub
@@ -245,11 +291,19 @@ Je suis donc resté en poste chez Berger-Levrault en tant qu'ingénieur R\&D afi
 
 \divider
 
-\cvevent{Casino}{Inria RMoD}{Février 2018}{Lille, FRANCE}
+\cvevent{Casino}{Inria RMoD -- Berger-Levrault}{Février 2018 -- 2023}{Lille, FRANCE}
 
 Casino est l'outil que j'ai développé pendant ma thèse et dont l'objectif est de faciliter la migration des front-ends d'application.
 L'outil est composé d'un méta-modèle, de plusieurs importeurs et plusieurs exporteurs.
 Il est disponible sur GitHub.
+
+\divider
+
+\cvevent{Pharo LibVLC }{}{}{}
+
+\href{https://github.com/badetitou/Pharo-LibVLC}
+{\color{blue}\underline{Pharo LibVLC}} est un binding FFI de la librairie de VLC avec Pharo.
+
 
 \divider
 
