--- a/sample.tex
+++ b/sample.tex
@@ -99,9 +99,10 @@
 
 \cvsection{Experiences}
 
-\cvevent{Ph.D. -- Ingénieur R\&D}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
+\cvevent{Ingénieur de Recherche -- Ph.D.}{Berger-Levrault}{Novembre 2021 -- Aujourd'hui}{Lyon, FRANCE}
 \begin{itemize}
-  \item Migration d'applications
+  \item Migration d'applications (Projets Casino -- IDM)
+  \item Analyse de la qualité des applications de l'entreprise (Moose/IDM)
   \item Encadrement de doctorants et de stagiaires
   \item Écriture de papiers de recherche
   \item Suivi du contrat cadre signé entre Berger-Levrault et Inria
@@ -114,7 +115,7 @@
   \item Migration d'applications GWT vers Angular
   \item Mise en place d'architecture hybride
   \item Écriture de papiers de recherche
-  \item Enseignement théorie des modèles
+  \item Enseignements
 \end{itemize}
 
 \divider
@@ -132,20 +133,17 @@
 
 \cvsection{Projets}
 
-\cvevent{Pharo Language Server}{Inria RMoD}{Décembre 2021}{Grenoble, FRANCE}
+\cvevent{Pharo Language Server}{Inria RMoD}{Décembre 2021 -- Aujourd'hui}{Grenoble, FRANCE}
 \begin{itemize}
 \item Connecter Pharo avec VSCode
-\item +21 étoiles GitHub
+\item +21 étoiles GitHub, +1700 téléchargements
 \end{itemize}
 
 \divider
 
-\cvevent{Casino}{Inria RMoD}{Février 2018}{Lille, FRANCE}
+\cvevent{Casino}{Inria RMoD}{Février 2018 -- Aujourd'hui}{Lille, FRANCE}
 
-Casino est l'outil que j'ai développé pendant ma thèse et dont l'objectif est de faciliter la migration des front-ends d'application.
-L'outil est composé d'un méta-modèle, de plusieurs importeurs et plusieurs exporteurs.
-Il est disponible sur GitHub.
-
+- Outil utilisant l'IDM permettant la migration d'application
 
   
 \switchcolumn
@@ -153,7 +151,7 @@ Il est disponible sur GitHub.
 \cvsection{Succès}
 
 \cvachievement{\faTrophy}{3ème place Innovation Award}{
-  \href{https://marketplace.visualstudio.com/items?itemName=badetitou.pharo-language-server}{\color{blue}\underline{Pharo Language Server}} est arrivé troisième à l’Innovation Award de ESUG2022}
+\href{https://marketplace.visualstudio.com/items?itemName=badetitou.pharo-language-server}{\color{blue}\underline{Pharo Language Server}} est arrivé troisième à l’Innovation Award de ESUG2022}
 
 \divider
 
@@ -192,6 +190,8 @@ Support à la migration d'applications GWT vers Angular
 \divider
 
 \cvevent{Ingénieur Informatique et Statistique}{Polytech Lille}{Septembre 2015 -- Juillet 2018}{}
+Formation centrée sur le le génie logiciel et les analyses statistiques (Data analyze).
+
 
 \divider
 
@@ -199,10 +199,11 @@ Support à la migration d'applications GWT vers Angular
 
 \cvsection{Langues}
 
-\cvskill{Français}{5}
+\cvskilltext{Français}{Langue maternelle}
+
 \divider
 
-\cvskill{Anglais}{4}
+\cvskilltext{Anglais}{Ecrit et parlé}
 
 \end{paracol}
 
@@ -212,16 +213,17 @@ Support à la migration d'applications GWT vers Angular
 
 \cvsection{Experiences}
 
-\cvevent{Ph.D. -- Ingénieur R\&D}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
+\cvevent{Ingénieur de Recherche -- Ph.D.}{Berger-Levrault}{Novembre 2021}{Lyon, FRANCE}
 \begin{itemize}
-\item Migration d'applications
-\item Encadrement de doctorants et de stagiaires
-\item Écriture de papiers de recherche
-\item Suivi du contrat cadre signé entre Berger-Levrault et Inria
+  \item Migration d'applications (Projets Casino -- IDM)
+  \item Analyse de la qualité des applications de l'entreprise (Moose/IDM)
+  \item Encadrement de doctorants et de stagiaires
+  \item Écriture de papiers de recherche
+  \item Suivi du contrat cadre signé entre Berger-Levrault et Inria
 \end{itemize}
 
 Suite à ma thèse, l'entreprise Berger-Levrault et l'Inria ont signé un contrat cadre (\href{https://www.inria.fr/fr/berger-levrault-inria-partenariat-numerique-responsable}{\color{blue}\underline{post inria}}).
-Je suis donc resté en poste chez Berger-Levrault en tant qu'ingénieur R\&D afin de poursuivre les travaux de migration de logiciel, et de suivre les doctorants qui découlent de ce contrat cadre.
+Je suis donc resté en poste chez Berger-Levrault en tant qu'ingénieur de recherche afin de poursuivre les travaux de migration de logiciel, et de suivre les doctorants qui découlent de ce contrat cadre.
 
 \divider
 
