--- a/altacv.cls
+++ b/altacv.cls
@@ -290,6 +290,18 @@
   \medskip\normalsize
 }
 
+\newcommand{\teachingevent}[5]{%
+  {\large\color{emphasis}#1\par}
+  \smallskip\normalsize
+  \ifstrequal{#2}{}{}{
+  \textbf{\color{accent}#2}\par
+  \smallskip}
+  \ifstrequal{#3}{}{}{{\small\makebox[0.3\linewidth][l]{\faCalendar~#3}}}%
+  \ifstrequal{#4}{}{}{{\small\makebox[0.3\linewidth][l]{\faMapMarker~#4}}}
+  \ifstrequal{#5}{}{}{{\small\makebox[0.3\linewidth][l]{\faClock~#5}}}\par
+  \medskip\normalsize
+}
+
 \newcommand{\cvachievement}[3]{%
   \begin{tabularx}{\linewidth}{@{}p{2em} @{\hspace{1ex}} >{\raggedright\arraybackslash}X@{}}
   \multirow{2}{*}{\Large\color{accent}#1} & \bfseries\textcolor{emphasis}{#2}\\
