--- a/sample.tex
+++ b/sample.tex
@@ -234,7 +234,7 @@ Formation centrée sur le le génie logiciel et les analyses statistiques (Data 
 
 Suite à ma thèse, l'entreprise Berger-Levrault et l'Inria ont signé un contrat cadre (\href{https://www.inria.fr/fr/berger-levrault-inria-partenariat-numerique-responsable}{\color{blue}\underline{post inria}}).
 Je suis donc resté en poste à Berger-Levrault en tant qu'ingénieur de recherche afin de poursuivre les travaux de migration de logiciel, et d'encadrer les doctorants qui découlent de ce contrat cadre.
-J'ai aussi lancer en interne un projet d'analyse des logiciels de l'entreprise en utilisant la platforme de méta-modèlisation Moose.
+J'ai aussi lancer en interne un projet d'analyse des logiciels de l'entreprise en utilisant la plateforme de méta-modèlisation Moose.
 
 \divider
 
@@ -384,7 +384,7 @@ J'ai encadré une trentaine d'étudiants pendant dix séances TPs de 4 heures po
 Ces enseignements visés à enseigner les languages de programmation C et Python.
 En particulier, l'objectif était de faire comprendre le fonctionnement de la compilation séparée,
 les différentes structures de données
-et du fonctionnement du système d'entrées et sorties d'une application.
+et du fonctionnement du système d'entrées / sorties d'une application.
 
 
 \divider
@@ -396,31 +396,31 @@ et du fonctionnement du système d'entrées et sorties d'une application.
 \item Support TP : \url{https://badetitou.fr/teaching/mtp/VisuRCA/}
 \end{itemize}
 
-J'ai enseigné durant ce cour à des étudiants de Master 2 de l'université de Montpellier.
-Pour cet enseignement, j'ai du concevoir, le cours, le TP et le TD.
-Les étudiants ont pu découvrir le language de programmation Pharo, la platforme d'analyse Moose et l'utilisation des modèles et méta-modèles afin d'extraire de l'information à partir du code d'un logiciel qu'ils ne connaissaient pas.
+J'ai enseigné durant ce cours à des étudiants de Master 2 de l'université de Montpellier.
+Pour cet enseignement, j'ai dû concevoir le cours, le TP et le TD.
+Les étudiants ont pu découvrir le language de programmation Pharo, la plateforme d'analyse Moose ainsi que l'utilisation des modèles et méta-modèles afin d'extraire de l'information à partir du code d'un logiciel qu'ils ne connaissaient pas.
 
 \divider
 
-\teachingevent{Fondamentaux architectures et systèmes d’exploitatio}{Polytech'Montpellier}{2020}{Montpellier, FRANCE}{2h}
+\teachingevent{Fondamentaux architectures et systèmes d’exploitation}{Polytech'Montpellier}{2020}{Montpellier, FRANCE}{2h}
 
 \begin{itemize}
-\item 1er année d'école d'ingénieur (Licence 3)
+\item 1ère année d'école d'ingénieur (Licence 3)
 \end{itemize}
 
-J'ai pu donner un cours sur le fonctionnement des processus sur Linux.
-En particulier, leurs fonctionnement, comment utiliser les \textit{fork}, lister les processus, et envoyer des signaux aux processus an utilisant Python.
+J'ai donné un cours sur le fonctionnement des processus sur Linux.
+En particulier, leurs fonctionnements, comment utiliser les \textit{fork}, lister les processus, et envoyer des signaux aux processus en utilisant Python.
 
 \divider
 
 \teachingevent{Architectures et Systèmes appliqués à l’IOT}{Polytech'Montpellier}{2020}{Montpellier, FRANCE}{17h}
 
 \begin{itemize}
-  \item 1er année d'école d'ingénieur (Licence 3)
+  \item 1ère année d'école d'ingénieur (Licence 3)
 \end{itemize}
 
-Durant cet enseignement j'ai encadré des étudiants pendant leurs découvertes de la programmation Python pour controler un Arduino.
-J'ai dans un premier temps fait l'enseignement des TPs, puis le suivi de projet et enfin l'évaluation des projets.
+Durant cet enseignement, j'ai encadré des étudiants pendant leurs découvertes de la programmation Python pour controler un Arduino.
+J'ai fait l'enseignement des TPs, le suivi de projet et enfin l'évaluation des projets.
 
 %% Yeah I didn't spend too much time making all the
 %% spacing consistent... sorry. Use \smallskip, \medskip,
