--- a/sample.tex
+++ b/sample.tex
@@ -103,7 +103,22 @@
 
 \cvsection{Experiences}
 
-\cvevent{Ingénieur de Recherche -- Ph.D.}{Berger-Levrault}{Novembre 2021 -- Aujourd'hui}{Lyon, FRANCE}
+\cvevent{Responsable de projets scientifiques}{Berger-levrault}{janv. 2024 - aujourd'hui}{Lyon, FRANCE}
+
+\begin{itemize}
+\item Manage research projects about 
+\item GreenIT for code
+\item Code migration and modernization 
+\item Tests Generation
+\begin{itemize}
+
+Also Managing a team of Researchers, Engineers, and PhD students
+
+Collaborating with several Research labs And with Industrial Business Units
+
+\divider
+
+\cvevent{Ingénieur de Recherche -- Ph.D.}{Berger-Levrault}{Novembre 2021 -- Décembre 2023}{Lyon, FRANCE}
 \begin{itemize}
   \item Migration d'applications (Projets Casino -- MDE)
   \item Analyse de la qualité des applications de l'entreprise (Moose/MDE)
