--- a/sample.tex
+++ b/sample.tex
@@ -107,7 +107,8 @@
 
 \begin{itemize}
 \item Manage research projects about 
-\item GreenIT for code
+\item GreenIT 
+\item AI for code
 \item Code migration and modernization 
 \item Tests Generation
 \begin{itemize}
