--- a/sample.tex
+++ b/sample.tex
@@ -111,7 +111,7 @@
 \item AI for code
 \item Code migration and modernization 
 \item Tests Generation
-\begin{itemize}
+\end{itemize}
 
 Also Managing a team of Researchers, Engineers, and PhD students
 
