--- a/sample.tex
+++ b/sample.tex
@@ -171,6 +171,10 @@ Collaborating with several Research labs And with Industrial Business Units
 
 \cvsection{Succès}
 
+\cvachievement{\faTrophy}{Prix Science Ouverte de la Thèse}{Mes travaux de thèse ont été récompensé par le \href{https://www.enseignementsup-recherche.gouv.fr/fr/remise-des-premiers-prix-science-ouverte-de-la-these-97810}{\color{blue}\underline{Prix Science Ouverte} par le Ministère de l'enseignement supérieur et de la recherche }}
+
+\divider
+
 \cvachievement{\faTrophy}{3ème place Innovation Award}{
 \href{https://marketplace.visualstudio.com/items?itemName=badetitou.pharo-language-server}{\color{blue}\underline{Pharo Language Server}} est arrivé troisième à l’Innovation Award de ESUG2022}
 
